# antigravity-job-search-agent

./: .env.example  .gitignore  DOCUMENTATION.md  LICENSE  README.md  criteria.md  docker-compose.yml  instructions.md  main.py  pyproject.toml  sources.yaml
schedule/: com.jobsearch.agent.plist  crontab.txt
src/: __init__.py  graph.py
src/agents/: criteria_parser.py  reputation.py  scoring.py
src/models/: criteria.py  job.py  scoring.py
src/report/: email_sender.py  renderer.py
src/storage/: database.py  vector_store.py
src/tools/: html_cleaner.py  searx_tool.py  sources.py
tests/: test_criteria.py  test_dedupe.py  test_scoring_schema.py
